--- a/landingpage.css
+++ b/landingpage.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 * {
   margin: 0;
@@ -43,7 +43,7 @@ nav a {
 main {
   justify-content: space-between;
   align-items: center;
-  padding: 3rem 7%;
+  /*padding: 3rem 7%;*/
   gap: 3rem;
   flex-wrap: wrap;
   width: 100%;
@@ -57,9 +57,7 @@ main {
   flex: 1;
   gap: 3rem;
   flex-wrap: wrap;
-  /*background-image: url('src/assets/MataBackgound.png');
-  background-size: cover;
-  background-position: center;*/
+  padding: 3rem 7%;
 }
 
 .texto {
@@ -92,7 +90,7 @@ strong {
 .botaoClique{
   align-items: flex-start;
   text-align: left;
-  margin-top: 5rem;
+  margin-top: 3rem;
   margin-left: 2rem;
 }
 
@@ -100,10 +98,11 @@ strong {
   background-color: #acd137;
   color: black;
   border: none;
-  padding: 0.8rem 2rem;
+  padding: 0.4rem 1.2rem;
   border-radius: 0.8rem;
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-weight: 400;
   cursor: pointer;
   transition: background 0.3s;
   align-items:flex-start;
@@ -111,11 +110,202 @@ strong {
 }
 
 .botao:hover {
-  background-color: #b4ea07;
+  background-color: #c3ff00;
 }
 
 .imagem img {
   width: 100%;
-  margin-right: rem;
+  margin-right: 0rem;
   max-width: 40rem; /*28rem;*/
+}
+
+/* Público-Alvo */
+.publico-alvo {
+  padding: 4rem 5%;
+  background-color: #f8faff;
+  text-align: center;
+  
+}
+
+.publico-alvo h2 {
+  font-size: 3.2rem;
+  margin-bottom: 2rem;
+  color: #3f6b0d;
+}
+
+.publico-container {
+  margin-top: 4%;
+  margin-bottom: 1.5%;
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+  flex-wrap: wrap;
+}
+
+.publico-card {
+  background-color: #f0f0f0;
+  padding: 1.8rem;
+  line-height: 1.5;
+  border-radius: 2rem;
+  width: 350px;
+  transition: transform 0.3s;
+}
+
+.publico-card:hover {
+  transform: translateY(-5px);
+}
+
+.publico-card img {
+  width: 3.5rem;
+}
+
+.publico-card h3 {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+.publico-card p {
+  font-size: 0.95rem;
+  color: #555;
+}
+
+.chamada-informacao {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-color: #acd137;
+}
+
+.chamada-bloco h3 {
+  font-family: "Poppins", sans-serif;
+  font-size: 2.5rem;
+  padding: 0.5rem 0.5%;
+  margin-top:3%;
+  text-align: center;
+  font-weight: 600;
+  color: black;
+  line-height: 1.3;
+}
+
+.chamada-bloco p {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight:500 ;
+}
+
+.chamada-box h3 {
+  border-radius: 0.8rem;
+  color: black;
+  font-weight: 500;
+  font-size: 1.8rem;
+  justify-items: center;
+  margin-bottom: 1.8rem;
+}
+
+/* Footer */
+.footer {
+  background-color: #e6edf7;
+  padding: 3rem 6%; /*3rem 5%;*/
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.footer-logo img {
+  width: 14rem;
+  margin-bottom: 0.5rem;
+}
+
+.footer-links ul,
+.footer-fontes ul {
+  list-style: none;
+  padding: 0;
+}
+
+/* RESPONSIVIDADE */
+@media (max-width: 1024px) {
+  main {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .container {
+    flex-direction: column;
+    /*align-items: center;*/
+  }
+
+  .texto h1 {
+    font-size: 2rem;
+  }
+
+  .texto2SubTitulo {
+    font-size: 1rem;
+  }
+
+  .footer-container {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .botao {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 230px;
+  }
+}
+
+@media (max-width: 768px) {
+  header {
+    flex-direction: column;
+    padding: 2%;
+    gap: 1rem;
+    text-align: center;
+  }
+
+  nav {
+    justify-content: center;
+  }
+
+  .search-container input {
+    width: 100%;
+    max-width: 14rem;
+  }
+
+  .footer__Classe {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .publico-container{
+    justify-content: center;
+  }
+}
+
+@media (max-width: 480px) {
+  .texto h1 {
+    font-size: 1.8rem;
+  }
+
+  .texto2SubTitulo{
+    font-size: 0.9rem;
+  }
+
+  nav{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .botao{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 230px;
+    
+  }
 }
